--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <h1>Hello github</h1>
         <h2>Hello world</h2>
         <h2>This is </h2>
+        <h1>hey </h1>
+        
     </body>
 </html>
